--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,7 +16,18 @@
 <script type="text/javascript" src="assets/resources/js/angular-route.js"></script>
 
 </head>
-<body>
-
+<body ng-app="monApp">
+<nav class="navbar navbar-inverse bg-primary navbar-fixed-top">
+	<ul class="nav nav-pills">
+		<li role="presentation"><a href="#!">A</a></li>
+		<li role="presentation"><a href="#!">B</a></li>
+		<li role="presentation"><a href="#!">C</a></li>
+		<li role="presentation"><a href="#!">D</a></li>
+		<li role="presentation"><a href="#!">E</a></li>
+	</ul>
+</nav>
+<div class="container">
+	<div ng-view=""></div>
+</div>
 </body>
 </html>
