Thibault : commit début agenceService

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,19 +15,23 @@
 <script type="text/javascript" src="assets/resources/js/angular.js"></script>
 <script type="text/javascript" src="assets/resources/js/angular-route.js"></script>
 
+<!-- Ajout du module principale -->
+<script type="text/javascript" src="assets/js/modules/monApp.js"></script>
+
 <!-- Ajout des services -->
 <script type="text/javascript" src="assets/js/services/responsableService.js"></script>
+<script type="text/javascript" src="assets/js/services/AgenceService.js"></script>
 
 <!-- Ajout des controllers -->
 <script type="text/javascript" src="assets/js/controllers/responsableController.js"></script>
-
+<script type="text/javascript" src="assets/js/controllers/AgenceController.js"></script>
 </head>
 <body ng-app="monApp">
 <nav class="navbar bg-primary navbar-fixed-top">
 	<div class="container-fluid">
 	<ul class="nav navbar-nav bg-info">
 		<li role="presentation"><a href="#!listeResponsable">Liste</a></li>
-		<li role="presentation"><a href="#!">B</a></li>
+		<li role="presentation"><a href="#!listeAgence">B</a></li>
 		<li role="presentation"><a href="#!">C</a></li>
 		<li role="presentation"><a href="#!">D</a></li>
 		<li role="presentation"><a href="#!">E</a></li>
