Thibault : ajout des liens vers les js

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,6 +18,9 @@
 <!-- Ajout du module principale -->
 <script type="text/javascript" src="assets/js/modules/monApp.js"></script>
 
+<!-- Ajout du script routing -->
+<script type="text/javascript" src="assets/js/routing/routing.js"></script>
+
 <!-- Ajout des services -->
 <script type="text/javascript" src="assets/js/services/responsableService.js"></script>
 <script type="text/javascript" src="assets/js/services/AgenceService.js"></script>
