Thibault : commit index menu déroulant

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -33,11 +33,56 @@
 <nav class="navbar bg-primary navbar-fixed-top">
 	<div class="container-fluid">
 	<ul class="nav navbar-nav bg-info">
-		<li role="presentation"><a href="#!listeResponsable">Liste</a></li>
-		<li role="presentation"><a href="#!listeAgence">B</a></li>
-		<li role="presentation"><a href="#!">C</a></li>
-		<li role="presentation"><a href="#!">D</a></li>
-		<li role="presentation"><a href="#!">E</a></li>
+		<li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown">Agence<span class="caret"></span></a>
+        	<ul class="dropdown-menu">
+          	<li><a href="#!listeAgence">Liste</a></li>
+          	<li><a href="#">Ajout</a></li>
+          	<li><a href="#">Suppression</a></li>
+          	<li><a href="#">Modification</a></li>
+          	<li><a href="#">Recherche</a></li>
+        	</ul>
+      	</li>
+      	<li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown">Responsable<span class="caret"></span></a>
+        	<ul class="dropdown-menu">
+          	<li><a href="#!listeResponsable">Liste</a></li>
+          	<li><a href="#">Ajout</a></li>
+          	<li><a href="#">Suppression</a></li>
+          	<li><a href="#">Modification</a></li>
+          	<li><a href="#">Recherche</a></li>
+        	</ul>
+      	</li>
+      	<li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown">Proprietaire<span class="caret"></span></a>
+        	<ul class="dropdown-menu">
+          	<li><a href="#!listeProprietaire">Liste</a></li>
+          	<li><a href="#">Ajout</a></li>
+          	<li><a href="#">Suppression</a></li>
+          	<li><a href="#">Modification</a></li>
+          	<li><a href="#">Recherche</a></li>
+        	</ul>
+      	</li>
+      	<li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown">Visite<span class="caret"></span></a>
+        	<ul class="dropdown-menu">
+          	<li><a href="#!listeVisite">Liste</a></li>
+          	<li><a href="#">Ajout</a></li>
+          	<li><a href="#">Suppression</a></li>
+          	<li><a href="#">Modification</a></li>
+          	<li><a href="#">Recherche</a></li>
+        	</ul>
+      	</li>
+      	<li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown">Client<span class="caret"></span></a>
+        	<ul class="dropdown-menu">
+          	<li><a href="#!listeClient">Liste</a></li>
+          	<li><a href="#">Ajout</a></li>
+          	<li><a href="#">Suppression</a></li>
+          	<li><a href="#">Modification</a></li>
+          	<li><a href="#">Recherche</a></li>
+        	</ul>
+      	</li>
 	</ul>
 	<ul class="nav navbar-nav navbar-right">
 	<form class="navbar-form">
