--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -25,11 +25,13 @@
 <script type="text/javascript" src="assets/js/services/responsableService.js"></script>
 <script type="text/javascript" src="assets/js/services/AgenceService.js"></script>
 <script type="text/javascript" src="assets/js/services/proprietaireService.js"></script>
+<script type="text/javascript" src="assets/js/services/clientService.js"></script>
 
 <!-- Ajout des controllers -->
 <script type="text/javascript" src="assets/js/controllers/responsableController.js"></script>
 <script type="text/javascript" src="assets/js/controllers/AgenceController.js"></script>
 <script type="text/javascript" src="assets/js/controllers/proprietaireController.js"></script>
+<script type="text/javascript" src="assets/js/controllers/clientController.js"></script>
 
 </head>
 <body ng-app="monApp">
