Claire : si un truc marche pas c'est ma faute

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -26,12 +26,14 @@
 <script type="text/javascript" src="assets/js/services/AgenceService.js"></script>
 <script type="text/javascript" src="assets/js/services/proprietaireService.js"></script>
 <script type="text/javascript" src="assets/js/services/clientService.js"></script>
+<script type="text/javascript" src="assets/js/services/visiteService.js"></script>
 
 <!-- Ajout des controllers -->
 <script type="text/javascript" src="assets/js/controllers/responsableController.js"></script>
 <script type="text/javascript" src="assets/js/controllers/AgenceController.js"></script>
 <script type="text/javascript" src="assets/js/controllers/proprietaireController.js"></script>
 <script type="text/javascript" src="assets/js/controllers/clientController.js"></script>
+<script type="text/javascript" src="assets/js/controllers/visiteController.js"></script>
 
 </head>
 <body ng-app="monApp">
