valentin commit : index et client vue ajouter

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -84,10 +84,10 @@
         <a class="dropdown-toggle" data-toggle="dropdown">Client<span class="caret"></span></a>
         	<ul class="dropdown-menu">
           	<li><a href="#!listeClient">Liste</a></li>
-          	<li><a href="#">Ajout</a></li>
-          	<li><a href="#">Suppression</a></li>
-          	<li><a href="#">Modification</a></li>
-          	<li><a href="#">Recherche</a></li>
+          	<li><a href="#!ajoutClient">Ajout</a></li>
+          	<li><a href="#!supprClient">Suppression</a></li>
+          	<li><a href="#!modifClient">Modification</a></li>
+          	<li><a href="#!rechercheClient">Recherche</a></li>
         	</ul>
       	</li>
 	</ul>
