claire: commit index+visiteVues

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -74,10 +74,10 @@
         <a class="dropdown-toggle" data-toggle="dropdown">Visite<span class="caret"></span></a>
         	<ul class="dropdown-menu">
           	<li><a href="#!listeVisite">Liste</a></li>
-          	<li><a href="#">Ajout</a></li>
-          	<li><a href="#">Suppression</a></li>
-          	<li><a href="#">Modification</a></li>
-          	<li><a href="#">Recherche</a></li>
+          	<li><a href="#!ajoutVisite">Ajout</a></li>
+          	<li><a href="#!supprVisite">Suppression</a></li>
+          	<li><a href="#!modifVisite">Modification</a></li>
+          	<li><a href="#!rechercheVisite">Recherche</a></li>
         	</ul>
       	</li>
       	<li class="dropdown">
