--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -44,20 +44,20 @@
         <a class="dropdown-toggle" data-toggle="dropdown">Agence<span class="caret"></span></a>
         	<ul class="dropdown-menu">
           	<li><a href="#!listeAgence">Liste</a></li>
-          	<li><a href="#">Ajout</a></li>
-          	<li><a href="#">Suppression</a></li>
-          	<li><a href="#">Modification</a></li>
-          	<li><a href="#">Recherche</a></li>
+          	<li><a href="#!ajoutAgence">Ajout</a></li>
+          	<li><a href="#!supprAgence">Suppression</a></li>
+          	<li><a href="#!modifAgence">Modification</a></li>
+          	<li><a href="#!rechercheAgence">Recherche</a></li>
         	</ul>
       	</li>
       	<li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown">Responsable<span class="caret"></span></a>
         	<ul class="dropdown-menu">
           	<li><a href="#!listeResponsable">Liste</a></li>
-          	<li><a href="#">Ajout</a></li>
-          	<li><a href="#">Suppression</a></li>
-          	<li><a href="#">Modification</a></li>
-          	<li><a href="#">Recherche</a></li>
+          	<li><a href="#!ajoutResponsable">Ajout</a></li>
+          	<li><a href="#!supprResponsable">Suppression</a></li>
+          	<li><a href="#!modifResponsable">Modification</a></li>
+          	<li><a href="#!rechercheResponsable">Recherche</a></li>
         	</ul>
       	</li>
       	<li class="dropdown">
