Noelia : bien immo à louer avec modif index

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -95,6 +95,16 @@
           	<li><a href="#!rechercheClient">Recherche</a></li>
         	</ul>
       	</li>
+      	<li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown">Bien en location<span class="caret"></span></a>
+        	<ul class="dropdown-menu">
+          	<li><a href="#!listeLouer">Liste</a></li>
+          	<li><a href="#!ajoutLouer">Ajout</a></li>
+          	<li><a href="#!supprLouer">Suppression</a></li>
+          	<li><a href="#!modifLouer">Modification</a></li>
+          	<li><a href="#!rechercheLouer">Recherche</a></li>
+        	</ul>
+      	</li>
 	</ul>
 	<ul class="nav navbar-nav navbar-right">
 	<form class="navbar-form">
