steven : commit calendrier

--- a/src/main/webapp/indexPC.html
+++ b/src/main/webapp/indexPC.html
@@ -16,6 +16,16 @@
 <script type="text/javascript" src="assets/resources/js/angular-route.js"></script>
 <script type="text/javascript" src="assets/resources/js/angular-base64-upload.js"></script>
 
+<!-- Les librairies de calendar -->
+<!-- CSS -->
+<link href="assets/resources/css/fullcalendar.css" rel="stylesheet" />
+<!-- JS -->
+<script type="text/javascript" src="assets/resources/js/moment.js"></script>
+<script type="text/javascript" src="assets/resources/js/jquery-1.11.3.js"></script>
+<script type="text/javascript" src="assets/resources/js/calendar.js"></script>
+<script type="text/javascript" src="assets/resources/js/fullcalendar.js"></script>
+<script type="text/javascript" src="assets/resources/js/gcal.js"></script>
+
 
 <!-- Ajout du module principale -->
 <script type="text/javascript" src="assets/js/client/modules/appClient.js"></script>
@@ -28,6 +38,7 @@
 <script type="text/javascript" src="assets/js/client/controllers/bienlouerPCController.js"></script>
 <script type="text/javascript" src="assets/js/client/controllers/bienvendrePCController.js"></script>
 <script type="text/javascript" src="assets/js/client/controllers/cSPCController.js"></script>
+<script type="text/javascript" src="assets/js/client/controllers/visitePCController.js"></script>
 
 <!-- Ajout des services -->
 <script type="text/javascript" src="assets/js/client/services/agencePCService.js"></script>
@@ -72,7 +83,7 @@
       	<li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown">Visite<span class="caret"></span></a>
         	<ul class="dropdown-menu">
-          	<li><a href="#!listeVisite">Liste</a></li>
+          	<li><a href="#!listeVisitePC">Liste</a></li>
           	<li><a href="#!ajoutVisite">Ajout</a></li>
           	<li><a href="#!supprVisite">Suppression</a></li>
           	<li><a href="#!modifVisite">Modification</a></li>
