Noelia : ajout des vues bien à vendre

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -31,6 +31,7 @@
 <script type="text/javascript" src="assets/js/controllers/visiteController.js"></script>
 <script type="text/javascript" src="assets/js/controllers/bienlouerController.js"></script>
 <script type="text/javascript" src="assets/js/controllers/ContratController.js"></script>
+<script type="text/javascript" src="assets/js/controllers/bienvendreController.js"></script>
 
 
 <!-- Ajout des services -->
@@ -41,6 +42,7 @@
 <script type="text/javascript" src="assets/js/services/visiteService.js"></script>
 <script type="text/javascript" src="assets/js/services/bienlouerService.js"></script>
 <script type="text/javascript" src="assets/js/services/ContratService.js"></script>
+<script type="text/javascript" src="assets/js/services/bienvendreService.js"></script>
 
 
 </head>
