claire: ajout lien classes standard

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -32,6 +32,7 @@
 <script type="text/javascript" src="assets/js/controllers/bienlouerController.js"></script>
 <script type="text/javascript" src="assets/js/controllers/ContratController.js"></script>
 <script type="text/javascript" src="assets/js/controllers/bienvendreController.js"></script>
+<script type="text/javascript" src="assets/js/controllers/classeStandardController.js"></script>
 
 
 <!-- Ajout des services -->
@@ -43,7 +44,7 @@
 <script type="text/javascript" src="assets/js/services/bienlouerService.js"></script>
 <script type="text/javascript" src="assets/js/services/ContratService.js"></script>
 <script type="text/javascript" src="assets/js/services/bienvendreService.js"></script>
-
+<script type="text/javascript" src="assets/js/services/classeStandardService.js"></script>
 
 </head>
 <body ng-app="monApp">
