steven : commit calendrier

--- a/src/main/webapp/indexPC.html
+++ b/src/main/webapp/indexPC.html
@@ -20,7 +20,7 @@
 <!-- CSS -->
 <link href="assets/resources/css/fullcalendar.css" rel="stylesheet" />
 <!-- JS -->
-<script type="text/javascript" src="assets/resources/js/moment.js"></script>
+<script type="text/javascript" src="assets/resources/js/moment.min.js"></script>
 <script type="text/javascript" src="assets/resources/js/calendar.js"></script>
 <script type="text/javascript" src="assets/resources/js/fullcalendar.js"></script>
 <script type="text/javascript" src="assets/resources/js/gcal.js"></script>
