--- a/src/main/webapp/indexPC.html
+++ b/src/main/webapp/indexPC.html
@@ -16,6 +16,11 @@
 <script type="text/javascript" src="assets/resources/js/angular-route.js"></script>
 <script type="text/javascript" src="assets/resources/js/angular-base64-upload.js"></script>
 
+<!-- Ajout de la librairie openLayer -->
+<script type="text/javascript"
+	src="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.1.3/build/ol.js"></script>
+<link rel="stylesheet"
+	href="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.1.3/css/ol.css">
 
 <!-- Ajout du module principale -->
 <script type="text/javascript" src="assets/js/client/modules/appClient.js"></script>
@@ -28,12 +33,14 @@
 <script type="text/javascript" src="assets/js/client/controllers/bienlouerPCController.js"></script>
 <script type="text/javascript" src="assets/js/client/controllers/bienvendrePCController.js"></script>
 <script type="text/javascript" src="assets/js/client/controllers/cSPCController.js"></script>
+<script type="text/javascript" src="assets/js/client/controllers/mapController.js"></script>
 
 <!-- Ajout des services -->
 <script type="text/javascript" src="assets/js/client/services/agencePCService.js"></script>
 <script type="text/javascript" src="assets/js/client/services/bienlouerPCService.js"></script>
 <script type="text/javascript" src="assets/js/client/services/bienvendrePCService.js"></script>
 <script type="text/javascript" src="assets/js/client/services/cSPCService.js"></script>
+<script type="text/javascript" src="assets/js/client/services/mapService.js"></script>
 
 </head>
 
@@ -67,7 +74,7 @@
           	<li><a href="#!listeClasseStandardPC">Liste</a></li>          	
         	</ul>
       	</li>
-      	  
+      	<li><a href="#!mapPC">MAP</a></li> 
       	
       	<li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown">Visite<span class="caret"></span></a>
