claire: commit essai carroussel dans blrecherche + vAjoutVue avec disabled ( tout perdu) je le refait dans modif

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,10 +6,12 @@
 
 <!-- Ajout de la librairie de bootstrap -->
 <link rel="stylesheet" href="assets/resources/css/bootstrap.css">
+<link href="//netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-glyphicons.css" rel="stylesheet">
 
 <!-- Ajout des librairie JS de bootstrap -->
 <script type="text/javascript" src="assets/resources/js/jquery-3.3.1.js"></script>
 <script type="text/javascript" src="assets/resources/js/bootstrap.js"></script>
+
 
 <!-- Ajout des librairies de angularJS -->
 <script type="text/javascript" src="assets/resources/js/angular.js"></script>
