thibault : commit ajout des lib icon

--- a/src/main/webapp/indexPC.html
+++ b/src/main/webapp/indexPC.html
@@ -23,6 +23,7 @@
 <!-- Les librairies de calendar -->
 <!-- CSS -->
 <link href="assets/resources/css/fullcalendar.css" rel="stylesheet" />
+<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
 <!-- JS -->
 <script type="text/javascript" src="assets/resources/js/moment.min.js"></script>
 <script type="text/javascript" src="assets/resources/js/calendar.js"></script>
