valentin modif index pc

--- a/src/main/webapp/indexPC.html
+++ b/src/main/webapp/indexPC.html
@@ -75,7 +75,8 @@
       	<li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown">Biens en vente<span class="caret"></span></a>
         	<ul class="dropdown-menu">
-          	<li><a href="#!listeVendrePC">Liste</a></li>          	
+          	<li><a href="#!listeVendrePC">Liste</a></li>  
+          	<li><a href="#!rechercheVendrePC">Recherche</a></li>        	
         	</ul>
       	</li>
       	<li class="dropdown">
