steven : commit rajout d'une méthode rechContratParResponsable

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -111,6 +111,7 @@
           	<li><a href="#!supprContrat">Suppression</a></li>
           	<li><a href="#!modifContrat">Modification</a></li>
           	<li><a href="#!rechercheContrat">Recherche</a></li>
+          	<li><a href="#!rechercheParRespContrat">Recherche</a></li>
         	</ul>
       	</li>
       	<li class="dropdown">
