valentin commit recherche par adresse louer

--- a/src/main/webapp/indexPC.html
+++ b/src/main/webapp/indexPC.html
@@ -69,7 +69,8 @@
       	<li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown">Biens en location<span class="caret"></span></a>
         	<ul class="dropdown-menu">
-          	<li><a href="#!listeLouerPC">Liste</a></li>          
+          	<li><a href="#!listeLouerPC">Liste</a></li>    
+          	<li><a href="#!rechercheLouerPC">Recherche</a></li>           	      
         	</ul>
       	</li>
       	<li class="dropdown">
