--- a/src/main/webapp/indexPC.html
+++ b/src/main/webapp/indexPC.html
@@ -17,8 +17,8 @@
 <script type="text/javascript" src="assets/resources/js/angular-base64-upload.js"></script>
 
 <!-- Ajout de la librairie openLayer -->
-<script src="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.2.0/build/ol.js"></script>
-<link rel="stylesheet" href="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.2.0/css/ol.css">
+<script type="text/javascript" src="assets/resources/js/ol.js"></script>
+<link rel="stylesheet" href="assets/resources/css/ol.css">
 
 <!-- Les librairies de calendar -->
 <!-- CSS -->
