Noelia : ajout de la fonctionnalite pour modif la dispo des biens

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -71,6 +71,7 @@
           	<li><a href="#!supprLouer">Suppression</a></li>
           	<li><a href="#!modifLouer">Modification</a></li>
           	<li><a href="#!rechercheLouer">Recherche</a></li>
+          	<li><a href="#!modifDispoLouer">Disponibilit&eacute</a></li>
         	</ul>
       	</li>
       	<li class="dropdown">
@@ -81,6 +82,7 @@
           	<li><a href="#!supprVendre">Suppression</a></li>
           	<li><a href="#!modifVendre">Modification</a></li>
           	<li><a href="#!rechercheVendre">Recherche</a></li>
+          	<li><a href="#!modifDispoVendre">Disponibilit&eacute</a></li>
         	</ul>
       	</li>
       	<li class="dropdown">
