--- a/src/main/webapp/indexPC.html
+++ b/src/main/webapp/indexPC.html
@@ -52,6 +52,20 @@
 <script type="text/javascript" src="assets/js/client/services/cSPCService.js"></script>
 <script type="text/javascript" src="assets/js/client/services/mapService.js"></script>
 
+<style type="text/css">
+
+body{
+background-image: url("assets/resources/image/erdre.jpg");
+background-size: cover;
+opacity: 0.5;
+
+}
+
+
+
+</style>
+
+
 </head>
 
 <body ng-app="appClient">
