--- a/src/main/webapp/indexPC.html
+++ b/src/main/webapp/indexPC.html
@@ -55,13 +55,49 @@
 <style type="text/css">
 
 body{
-background-image: url("assets/resources/image/erdre.jpg");
+background-image: url("assets/resources/image/erdre_op80.jpg");
 background-size: cover;
-opacity: 0.5;
 
 }
 
-
+#space {
+    float: left;
+    position: relative;
+    -webkit-animation-name: example;
+    -webkit-animation-duration: 12s;
+    -webkit-animation-iteration-count: infinite;
+}
+@-webkit-keyframes example {
+    0% {
+        left: 0px;
+        bottom: 25px;
+        -moz-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    35% {
+        left: 1230px;
+        bottom: 25px;
+        -moz-animation-timing-function: ease;
+        -moz-transform: rotate(90deg);
+        transform: rotate(90deg);
+    }
+    50%{
+        left: 1250px;
+        bottom: -25px;
+        -moz-transform: rotate(180deg);
+        transform: rotate(180deg);
+    }
+    85% {
+        left: 25px;
+        bottom: -25px;
+        -moz-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+    100% {
+        left: 0px;
+        bottom: 25px;
+    }
+}
 
 </style>
 
@@ -127,9 +163,11 @@ opacity: 0.5;
 <br/>
 <br/>
 <hr/>
+
 <div class="container">
 	<div ng-view=""></div>
 </div>
 
+<div><i id="space"><img src="assets/resources/image/Elephant-Logo.png" style="max-height: 200px; max-width: 200px"></i></div>
 </body>
 </html>
