--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,7 +6,9 @@
 
 <!-- Ajout de la librairie de bootstrap -->
 <link rel="stylesheet" href="assets/resources/css/bootstrap.css">
-<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
+<link
+	href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css"
+	rel="stylesheet">
 
 <!-- Ajout des librairie JS de bootstrap -->
 <script type="text/javascript" src="assets/resources/js/jquery-3.3.1.js"></script>
@@ -15,8 +17,10 @@
 
 <!-- Ajout des librairies de angularJS -->
 <script type="text/javascript" src="assets/resources/js/angular.js"></script>
-<script type="text/javascript" src="assets/resources/js/angular-route.js"></script>
-<script type="text/javascript" src="assets/resources/js/angular-base64-upload.js"></script>
+<script type="text/javascript"
+	src="assets/resources/js/angular-route.js"></script>
+<script type="text/javascript"
+	src="assets/resources/js/angular-base64-upload.js"></script>
 
 
 <!-- Ajout du module principale -->
@@ -26,142 +30,150 @@
 <script type="text/javascript" src="assets/js/routing/routing.js"></script>
 
 <!-- Ajout des controllers -->
-<script type="text/javascript" src="assets/js/controllers/responsableController.js"></script>
-<script type="text/javascript" src="assets/js/controllers/AgenceController.js"></script>
-<script type="text/javascript" src="assets/js/controllers/proprietaireController.js"></script>
-<script type="text/javascript" src="assets/js/controllers/clientController.js"></script>
-<script type="text/javascript" src="assets/js/controllers/visiteController.js"></script>
-<script type="text/javascript" src="assets/js/controllers/bienlouerController.js"></script>
-<script type="text/javascript" src="assets/js/controllers/ContratController.js"></script>
-<script type="text/javascript" src="assets/js/controllers/bienvendreController.js"></script>
-<script type="text/javascript" src="assets/js/controllers/classeStandardController.js"></script>
+<script type="text/javascript"
+	src="assets/js/controllers/responsableController.js"></script>
+<script type="text/javascript"
+	src="assets/js/controllers/AgenceController.js"></script>
+<script type="text/javascript"
+	src="assets/js/controllers/proprietaireController.js"></script>
+<script type="text/javascript"
+	src="assets/js/controllers/clientController.js"></script>
+<script type="text/javascript"
+	src="assets/js/controllers/visiteController.js"></script>
+<script type="text/javascript"
+	src="assets/js/controllers/bienlouerController.js"></script>
+<script type="text/javascript"
+	src="assets/js/controllers/ContratController.js"></script>
+<script type="text/javascript"
+	src="assets/js/controllers/bienvendreController.js"></script>
+<script type="text/javascript"
+	src="assets/js/controllers/classeStandardController.js"></script>
 
 
 <!-- Ajout des services -->
-<script type="text/javascript" src="assets/js/services/responsableService.js"></script>
+<script type="text/javascript"
+	src="assets/js/services/responsableService.js"></script>
 <script type="text/javascript" src="assets/js/services/AgenceService.js"></script>
-<script type="text/javascript" src="assets/js/services/proprietaireService.js"></script>
+<script type="text/javascript"
+	src="assets/js/services/proprietaireService.js"></script>
 <script type="text/javascript" src="assets/js/services/clientService.js"></script>
 <script type="text/javascript" src="assets/js/services/visiteService.js"></script>
-<script type="text/javascript" src="assets/js/services/bienlouerService.js"></script>
-<script type="text/javascript" src="assets/js/services/ContratService.js"></script>
-<script type="text/javascript" src="assets/js/services/bienvendreService.js"></script>
-<script type="text/javascript" src="assets/js/services/classeStandardService.js"></script>
+<script type="text/javascript"
+	src="assets/js/services/bienlouerService.js"></script>
+<script type="text/javascript"
+	src="assets/js/services/ContratService.js"></script>
+<script type="text/javascript"
+	src="assets/js/services/bienvendreService.js"></script>
+<script type="text/javascript"
+	src="assets/js/services/classeStandardService.js"></script>
 
 </head>
 <body ng-app="monApp">
-<nav class="navbar bg-primary navbar-fixed-top">
-	<div class="container-fluid">
-	<ul class="nav navbar-nav bg-info">
-		<li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown">Agence<span class="caret"></span></a>
-        	<ul class="dropdown-menu">
-          	<li><a href="#!listeAgence">Liste</a></li>
-          	<li><a href="#!ajoutAgence">Ajout</a></li>
-          	<li><a href="#!supprAgence">Suppression</a></li>
-          	<li><a href="#!modifAgence">Modification</a></li>
-          	<li><a href="#!rechercheAgence">Recherche</a></li>
-        	</ul>
-      	</li>
-      	<li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown">Biens en location<span class="caret"></span></a>
-        	<ul class="dropdown-menu">
-          	<li><a href="#!listeLouer">Liste</a></li>
-          	<li><a href="#!ajoutLouer">Ajout</a></li>
-          	<li><a href="#!supprLouer">Suppression</a></li>
-          	<li><a href="#!modifLouer">Modification</a></li>
-          	<li><a href="#!rechercheLouer">Recherche</a></li>
-          	<li><a href="#!modifDispoLouer">Disponibilit&eacute</a></li>
-        	</ul>
-      	</li>
-      	<li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown">Biens en vente<span class="caret"></span></a>
-        	<ul class="dropdown-menu">
-          	<li><a href="#!listeVendre">Liste</a></li>
-          	<li><a href="#!ajoutVendre">Ajout</a></li>
-          	<li><a href="#!supprVendre">Suppression</a></li>
-          	<li><a href="#!modifVendre">Modification</a></li>
-          	<li><a href="#!rechercheVendre">Recherche</a></li>
-          	<li><a href="#!modifDispoVendre">Disponibilit&eacute</a></li>
-        	</ul>
-      	</li>
-      	<li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown">Classe Standard<span class="caret"></span></a>
-        	<ul class="dropdown-menu">
-          	<li><a href="#!listeClasseStandard">Liste</a></li>
-          	<li><a href="#!ajoutClasseStandard">Ajout</a></li>
-          	<li><a href="#!supprClasseStandard">Suppression</a></li>
-          	<li><a href="#!modifClasseStandard">Modification</a></li>
-          	<li><a href="#!rechercheClasseStandard">Recherche</a></li>
-        	</ul>
-      	</li>
-      	<li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown">Client<span class="caret"></span></a>
-        	<ul class="dropdown-menu">
-          	<li><a href="#!listeClient">Liste</a></li>
-          	<li><a href="#!ajoutClient">Ajout</a></li>
-          	<li><a href="#!supprClient">Suppression</a></li>
-          	<li><a href="#!modifClient">Modification</a></li>
-          	<li><a href="#!rechercheClient">Recherche</a></li>
-        	</ul>
-      	</li>
-      	<li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown">Contrat<span class="caret"></span></a>
-        	<ul class="dropdown-menu">
-          	<li><a href="#!listeContrat">Liste</a></li>
-          	<li><a href="#!ajoutContrat">Ajout</a></li>
-          	<li><a href="#!supprContrat">Suppression</a></li>
-          	<li><a href="#!modifContrat">Modification</a></li>
-          	<li><a href="#!rechercheContrat">Recherche</a></li>
-          	<li><a href="#!rechercheParRespContrat">Recherche</a></li>
-        	</ul>
-      	</li>
-      	<li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown">Proprietaire<span class="caret"></span></a>
-        	<ul class="dropdown-menu">
-          	<li><a href="#!listeProprietaire">Liste</a></li>
-          	<li><a href="#!ajoutProprietaire">Ajout</a></li>
-          	<li><a href="#!supprProprietaire">Suppression</a></li>
-          	<li><a href="#!modifProprietaire">Modification</a></li>
-          	<li><a href="#!rechercheProprietaire">Recherche</a></li>
-        	</ul>
-      	</li>
-      	<li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown">Responsable<span class="caret"></span></a>
-        	<ul class="dropdown-menu">
-          	<li><a href="#!listeResponsable">Liste</a></li>
-          	<li><a href="#!ajoutResponsable">Ajout</a></li>
-          	<li><a href="#!supprResponsable">Suppression</a></li>
-          	<li><a href="#!modifResponsable">Modification</a></li>
-          	<li><a href="#!rechercheResponsable">Recherche</a></li>
-        	</ul>
-      	</li>
-      	<li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown">Visite<span class="caret"></span></a>
-        	<ul class="dropdown-menu">
-          	<li><a href="#!listeVisite">Liste</a></li>
-          	<li><a href="#!ajoutVisite">Ajout</a></li>
-          	<li><a href="#!supprVisite">Suppression</a></li>
-          	<li><a href="#!modifVisite">Modification</a></li>
-          	<li><a href="#!rechercheVisite">Recherche</a></li>
-        	</ul>
-      	</li>
 
-      	
-	</ul>
-	<ul class="nav navbar-nav navbar-right">
-	<form class="navbar-form">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-info" type="submit">Search</button>
-    </form>
-    </ul>
-    </div>
-</nav>
-<br/>
-<br/>
-<hr/>
-<div class="container">
-	<div ng-view=""></div>
-</div>
+	<nav class="navbar bg-primary navbar-fixed-top">
+		<div class="container-fluid">
+			<ul class="nav navbar-nav bg-info">
+				<li class="dropdown"><a class="dropdown-toggle"
+					data-toggle="dropdown">Agence<span class="caret"></span></a>
+					<ul class="dropdown-menu">
+						<li><a href="#!listeAgence">Liste</a></li>
+						<li><a href="#!ajoutAgence">Ajout</a></li>
+						<li><a href="#!supprAgence">Suppression</a></li>
+						<li><a href="#!modifAgence">Modification</a></li>
+						<li><a href="#!rechercheAgence">Recherche</a></li>
+					</ul></li>
+				<li class="dropdown"><a class="dropdown-toggle"
+					data-toggle="dropdown">Biens en location<span class="caret"></span></a>
+					<ul class="dropdown-menu">
+						<li><a href="#!listeLouer">Liste</a></li>
+						<li><a href="#!ajoutLouer">Ajout</a></li>
+						<li><a href="#!supprLouer">Suppression</a></li>
+						<li><a href="#!modifLouer">Modification</a></li>
+						<li><a href="#!rechercheLouer">Recherche</a></li>
+						<li><a href="#!modifDispoLouer">Disponibilit&eacute</a></li>
+					</ul></li>
+				<li class="dropdown"><a class="dropdown-toggle"
+					data-toggle="dropdown">Biens en vente<span class="caret"></span></a>
+					<ul class="dropdown-menu">
+						<li><a href="#!listeVendre">Liste</a></li>
+						<li><a href="#!ajoutVendre">Ajout</a></li>
+						<li><a href="#!supprVendre">Suppression</a></li>
+						<li><a href="#!modifVendre">Modification</a></li>
+						<li><a href="#!rechercheVendre">Recherche</a></li>
+						<li><a href="#!modifDispoVendre">Disponibilit&eacute</a></li>
+					</ul></li>
+				<li class="dropdown"><a class="dropdown-toggle"
+					data-toggle="dropdown">Classe Standard<span class="caret"></span></a>
+					<ul class="dropdown-menu">
+						<li><a href="#!listeClasseStandard">Liste</a></li>
+						<li><a href="#!ajoutClasseStandard">Ajout</a></li>
+						<li><a href="#!supprClasseStandard">Suppression</a></li>
+						<li><a href="#!modifClasseStandard">Modification</a></li>
+						<li><a href="#!rechercheClasseStandard">Recherche</a></li>
+					</ul></li>
+				<li class="dropdown"><a class="dropdown-toggle"
+					data-toggle="dropdown">Client<span class="caret"></span></a>
+					<ul class="dropdown-menu">
+						<li><a href="#!listeClient">Liste</a></li>
+						<li><a href="#!ajoutClient">Ajout</a></li>
+						<li><a href="#!supprClient">Suppression</a></li>
+						<li><a href="#!modifClient">Modification</a></li>
+						<li><a href="#!rechercheClient">Recherche</a></li>
+					</ul></li>
+				<li class="dropdown"><a class="dropdown-toggle"
+					data-toggle="dropdown">Contrat<span class="caret"></span></a>
+					<ul class="dropdown-menu">
+						<li><a href="#!listeContrat">Liste</a></li>
+						<li><a href="#!ajoutContrat">Ajout</a></li>
+						<li><a href="#!supprContrat">Suppression</a></li>
+						<li><a href="#!modifContrat">Modification</a></li>
+						<li><a href="#!rechercheContrat">Recherche</a></li>
+						<li><a href="#!rechercheParRespContrat">Recherche</a></li>
+					</ul></li>
+				<li class="dropdown"><a class="dropdown-toggle"
+					data-toggle="dropdown">Proprietaire<span class="caret"></span></a>
+					<ul class="dropdown-menu">
+						<li><a href="#!listeProprietaire">Liste</a></li>
+						<li><a href="#!ajoutProprietaire">Ajout</a></li>
+						<li><a href="#!supprProprietaire">Suppression</a></li>
+						<li><a href="#!modifProprietaire">Modification</a></li>
+						<li><a href="#!rechercheProprietaire">Recherche</a></li>
+					</ul></li>
+				<li class="dropdown"><a class="dropdown-toggle"
+					data-toggle="dropdown">Responsable<span class="caret"></span></a>
+					<ul class="dropdown-menu">
+						<li><a href="#!listeResponsable">Liste</a></li>
+						<li><a href="#!ajoutResponsable">Ajout</a></li>
+						<li><a href="#!supprResponsable">Suppression</a></li>
+						<li><a href="#!modifResponsable">Modification</a></li>
+						<li><a href="#!rechercheResponsable">Recherche</a></li>
+					</ul></li>
+				<li class="dropdown"><a class="dropdown-toggle"
+					data-toggle="dropdown">Visite<span class="caret"></span></a>
+					<ul class="dropdown-menu">
+						<li><a href="#!listeVisite">Liste</a></li>
+						<li><a href="#!ajoutVisite">Ajout</a></li>
+						<li><a href="#!supprVisite">Suppression</a></li>
+						<li><a href="#!modifVisite">Modification</a></li>
+						<li><a href="#!rechercheVisite">Recherche</a></li>
+					</ul></li>
+
+
+			</ul>
+			<ul class="nav navbar-nav navbar-right">
+				<form class="navbar-form">
+					<input class="form-control mr-sm-2" type="search"
+						placeholder="Search" aria-label="Search">
+					<button class="btn btn-info" type="submit">Search</button>
+				</form>
+			</ul>
+		</div>
+	</nav>
+	<br />
+	<br />
+	<hr />
+	<div class="container">
+		<div ng-view=""></div>
+	</div>
 </body>
 </html>
