thibault : la musique oui la musique !

--- a/src/main/webapp/indexPC.html
+++ b/src/main/webapp/indexPC.html
@@ -188,6 +188,8 @@ td{
 	<div ng-view=""></div>
 </div>
 
-
+<audio controls autoplay loop>
+	<source src="assets/resources/son/vivPri.mp3" type="audio/mpeg"/>
+</audio>
 </body>
 </html>
